TAG: nomenload-6-0-5-1
DATE: 08/30/2016
STAFF: lec
CHANGES:
TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
 _Marker_Status_key in (1,3) changed to "= 1"

TAG: nomenload-6-0-4-2
DATE: 07/11/2016
STAFF: sc
CHANGES: TR12313
1) updateMkrType.csh, updateMkrType.py - updated for postgres, rejiggered a bit 
   and updated config vars that no longer exist

TAG: nomenload-6-0-4-1
DATE: 06/16/2016
STAFF: lec 
CHANGES:
1) convert to git

TAG: nomenload-6-0-1-12
DATE: 11/30/2015
STAFF: dbm
CHANGES: TR11904 & TR12199
1) nomenload.config.default: Cleanup MAIL_LOG_PROC override
2) nomensanitycheck.config.default: Cleanup MAIL_LOG_PROC override

TAG: nomenload-6-0-1-11
DATE: 10/15/2015
STAFF: dbm
CHANGES:
1) bin/nomenload.py: Remove "ERROR" for error log so it doesn't end up in
                     stdout and get flagged by the checklog script

TAG: nomenload-6-0-1-10
TAG: nomenload-6-0-1-9
TAG: nomenload-6-0-1-8
TAG: nomenload-6-0-1-7
TAG: nomenload-6-0-1-6
TAG: nomenload-6-0-1-5
TAG: nomenload-6-0-1-4
TAG: nomenload-6-0-1-3
TAG: nomenload-6-0-1-2
TAG: nomenload-6-0-1-1
DATE: 10/01/2015
STAFF: lec
CHANGES:
1) TR2070/12166 : implement curator sanity checking/publishing
preview:
${NOMENLOAD}/bin/nomenload.sh ${NOMENLOAD}/nomensanitycheck.config /data/nomen/pending/your-file
production:
${NOMENLOAD}/bin/nomenload.sh ${NOMENLOAD}/nomenload.config

TAG: nomenload-6-0-0-6
TAG: nomenload-6-0-0-5
DATE: 09/14/2015
STAFF: sc
CHANGES: Checking into CVS so Lori may look at it. 
While testing TR12109/TR12058 nomenload's discovered some conversion bugs:
1) replaced: db.set_sqlLogFD(diagFile)
   with: db.set_commandLogFile(diagFileName) 
   as db.set_sqlLogFD no longer exists
2) removed: results = db.sql('select _Term_key from VOC_Term_CurationState_View where term = \'Internal\'', 'auto')
   as: it is not being used and the view no longer exists

TAG: nomenload-6-0-0-4
DATE: 08/31/2015
STAFF: lec
CHANGES:
1) TR12083/mrk_marker/_curationstate_key/obsolet

TAG: nomenload-6-0-0-3