@@ -1,3 +1,10 @@
+TAG: nomenload-6-0-6-1
+DATE: 10/24/2016
+STAFF: lec
+CHANGES:
+TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
+added sanity check for NOM_Marker duplicates
+
 TAG: nomenload-6-0-5-1
 DATE: 08/30/2016
 STAFF: lec
